--- a/src/components/blocks/BlogContent.module.css
+++ b/src/components/blocks/BlogContent.module.css
@@ -1,19 +1,20 @@
-a {
-    color: var(--text);
-    text-decoration: none;
-}
-
-a:hover {
-    color: var(--highlight);
-    text-decoration: underline;
-}
-
 p {
     margin: 0;
     padding: 0;
 }
 
 h2 {
-    margin-bottom: 10px;
+    margin-bottom: 2px;
     padding: 0;
+}
+
+.secondary {
+    color: var(--secondary-text);
+    margin-bottom: 8px;
+}
+
+article {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 2px solid var(--secondary-text);
 }
