--- a/src/components/blocks/Layout.module.css
+++ b/src/components/blocks/Layout.module.css
@@ -1,7 +1,9 @@
 :root {
     --background: #ffffff;
     --text: #000000;
-    --highlight: #D81B3F;
+    --secondary-text: #8b8a8a;
+    --tertiary-text: #f3f3f3;
+    --highlight: #a71731;
 }
 
 body {
@@ -11,4 +13,34 @@ body {
 .container {
     margin: auto;
     max-width: 500px;
+    padding: 20px;
+    border-right: 2px solid var(--tertiary-text);
+    border-left: 2px solid var(--tertiary-text);
+    font-family: "Times New Roman", "Georgia", "Arial"
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.header a {
+    color: var(--secondary-text)
+}
+
+.header h1 {
+    text-align: center;
+    color: var(--text);
+    font-family: "Brush Script MT", "Garamond";
+}
+
+a {
+    color: var(--text);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--highlight);
+    text-decoration: underline;
 }
